# COMS30115

Labs/starfield/: .gitignore  Makefile
Labs/starfield/Source/: SDLauxiliary.h  TestModel.h  skeleton.cpp
simon/0D-RedNoise/: .gitignore  RedNoise.cpp
simon/2D-Lab/: RedNoise.cpp
simon/3D/: .gitignore  Animatable.cpp  Animatable.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Clipping.cpp  Clipping.hpp  Light.cpp  Light.h  Light.hpp  Lines.cpp  Lines.hpp  Magnet.cpp  Magnet.hpp  Makefile  Material.h  Model.cpp  Model.hpp  Moon2K.mtl  Movement.cpp  Movement.hpp  Orbit.cpp  Orbit.hpp  Raytracer.cpp  RedNoise.cpp  Rigidbody.cpp  Rigidbody.hpp  SSAA.cpp  SSAA.hpp  Temporal.cpp  Temporal.hpp  TexturesCom_Ground_Soil3_3x3_512_albedo.ppm  TexturesCom_Ground_Soil3_3x3_512_normal.ppm  Times.cpp  Times.hpp  Transformable.cpp  Transformable.hpp  Triangle.cpp  Triangle.hpp  (+17 more)
simon/3D/GlassSphere/: TexturesCom_Tiles_Glass4_1K_albedo.ppm  glassSphere.mtl
simon/3D/HackspaceLogo/: logo.mtl
simon/3D/Models/: TexturesCom_Ground_Soil3_3x3_512_normal.ppm  cornell-box.mtl
simon/3D/Models/asteroid/: asteroid.mtl
simon/3D/Models/mars/: Mars_diff.ppm  mars2.mtl
simon/3D/Models/moon/: Moon2K.mtl
simon/3D/Models/uranus/: 13907_Uranus_Rings_diff.ppm  13907_Uranus_planet_diff.ppm  uranus.mtl
simon/3D/asteroid/: 10464_Asteroid_v1_diffuse.ppm  asteroid.mtl
simon/3D/earth/: earth.mtl  earth2.mtl
simon/3D/libs/sdw/: CanvasPoint.h  Colour.cpp  Colour.h  DrawingWindow.h  ModelTriangle.cpp  ModelTriangle.h  RayTriangleIntersection.h  TexturePoint.h  Utils.cpp  Utils.h
simon/3D/mars/: mars.mtl  mars2.mtl
simon/3D/saturn/: saturn.mtl  texture_0_17832851910588591680.ppm  texture_1.ppm
simon/3D/uranus/: uranus - Copy.mtl  uranus.mtl
simon/5D/: RedNoise.cpp
simon/5D/libs/sdw/: DrawingWindow.cpp  DrawingWindow.h
